--- a/meta.html
+++ b/meta.html
@@ -1,10 +1,10 @@
 <!-- Primary Meta Tags -->
-<title>Hertie Coding Club - Everybody can learn to code</title>
-<meta name="title" content="Hertie Coding Club - Everybody can learn to code">
-<meta name="description" content="Welcome to the Hertie Coding Club! Our goal as a club is to help everyone and between us learn coding skills and show that coding is for everyone, no matter our background.">
+<title>Ethics x Data Science - Everybody can learn to code</title>
+<meta name="title" content="Ethics x Data Science - Resources for Teaching and Learning">
+<meta name="description" content="Welcome to the Ethics x Data Science. Our goal is to provide and share resources for teaching ethics to non-ethicists and data science to non-data-scientists.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.hertiecodingclub.com">
-<meta property="og:title" content="Hertie Coding Club - Everybody can learn to code">
-<meta property="og:description" content="Welcome to the Hertie Coding Club! Our goal as a club is to help everyone and between us learn coding skills and show that coding is for everyone, no matter our background.">
+<meta property="og:url" content="https://ds-ethics.org">
+<meta property="og:title" content="Ethics x Data Science - Resources for Teaching and Learning">
+<meta property="og:description" content="Welcome to the Ethics x Data Science. Our goal is to provide and share resources for teaching ethics to non-ethicists and data science to non-data-scientists.">
