title and approaches update
added text on main page, revised approaches article, some small cosmetic changes

--- a/data_science/meta.html
+++ b/data_science/meta.html
@@ -1,10 +1,10 @@
 <!-- Primary Meta Tags -->
-<title>Hertie Coding Club - Learn</title>
-<meta name="title" content="Hertie Coding Club - Learn">
+<title>Ethics &#x2715; Data Science - Data Science</title>
+<meta name="title" content="Ethics &#x2715; Data Science - Data Science">
 
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.hertiecodingclub.com/learn/rstudio.html">
-<meta property="og:title" content="Hertie Coding Club - Learn">
+<meta property="og:url" content="https://ds-ethics.org/data_science/data_science.html">
+<meta property="og:title" content="Ethics &#x2715; Data Science - Data Science">
 
