--- a/ethics/meta.html
+++ b/ethics/meta.html
@@ -1,10 +1,10 @@
 <!-- Primary Meta Tags -->
-<title>Hertie Coding Club - Learn</title>
-<meta name="title" content="Hertie Coding Club - Learn">
+<title>Ethics &#x2715; Data Science - Ethics</title>
+<meta name="title" content="Ethics &#x2715; Data Science - Ethics">
 
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.hertiecodingclub.com/learn/rstudio.html">
-<meta property="og:title" content="Hertie Coding Club - Learn">
+<meta property="og:url" content="https://ds-ethics.org/ethics/ethics.html">
+<meta property="og:title" content="Ethics &#x2715; Data Science - Ethics">
 
