--- a/meta.html
+++ b/meta.html
@@ -1,10 +1,10 @@
 <!-- Primary Meta Tags -->
-<title>Ethics x Data Science - Everybody can learn to code</title>
+<title>Ethics &#x2715; Data Science - Resources for Teaching and Learning</title>
 <meta name="title" content="Ethics x Data Science - Resources for Teaching and Learning">
 <meta name="description" content="Welcome to the Ethics x Data Science. Our goal is to provide and share resources for teaching ethics to non-ethicists and data science to non-data-scientists.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://ds-ethics.org">
-<meta property="og:title" content="Ethics x Data Science - Resources for Teaching and Learning">
+<meta property="og:title" content="Ethics &#x2715; Data Science - Resources for Teaching and Learning">
 <meta property="og:description" content="Welcome to the Ethics x Data Science. Our goal is to provide and share resources for teaching ethics to non-ethicists and data science to non-data-scientists.">
